# VideoEditor

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  local.properties  settings.gradle
mediaSdk/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
mediaSdk/src/: .gitignore
mediaSdk/src/main/: AndroidManifest.xml
mediaSdk/src/main/assets/: music.xml
mediaSdk/src/main/assets/pag_particle/: particle18.pag
mediaSdk/src/main/assets/pag_tran/: camera1.pag  camera2.pag  carton1.pag  carton10.pag  carton11.pag  carton2.pag  carton3.pag  carton4.pag  carton5.pag  carton6.pag  carton7.pag  carton8.pag  carton9.pag  glitch3.pag  glitch7.pag  halo3.pag  halo6.pag  halo9.pag  paper1.pag
mediaSdk/src/main/assets/shader/: base_fragment.sh  base_record_fragment.sh  base_vertex.sh  embedded_filter_vertex.glsl  firework_fragment.glsl  firework_vertex.glsl  oes_base_fragment.sh  oes_base_vertex.sh  quarter_cylinder_fragment.glsl  quarter_cylinder_vertex.glsl  redblue_transition_fragment.glsl  repeat_fragment.glsl  repeat_vertex.glsl
mediaSdk/src/main/cpp/: android_log.h  ffmpeg_cmd.c  ffmpeg_cmd.h  ffmpeg_thread.c  ffmpeg_thread.h
mediaSdk/src/main/cpp/ffmpeg/: cmdutils.c  config.h  ffmpeg.c  ffmpeg.h  video_filter.c  video_player.c
mediaSdk/src/main/res/drawable/: graduient_background0.xml  graduient_background1.xml  graduient_background10.xml  graduient_background11.xml  graduient_background12.xml  graduient_background13.xml  graduient_background2.xml  graduient_background3.xml  graduient_background4.xml  graduient_background5.xml  graduient_background6.xml  graduient_background7.xml  graduient_background8.xml  graduient_background9.xml  vector_filter_none.xml
mediaSdk/src/main/res/raw/: bd_particle_four_fragment.glsl  bd_particle_two_fragment.glsl  bd_particle_two_vertex.glsl  bdthree_cluster_one_fragment.glsl  bdthree_cluster_one_vertex.glsl  beautify_fragment_low.glsl  calm.glsl  cracked.glsl  gpu_round_blur.glsl  invert_color.glsl  latte.glsl  lomo.glsl  mediasdk_filter_antique.glsl  mediasdk_filter_beauty.glsl  mediasdk_filter_beauty1.glsl  mediasdk_filter_beauty2.glsl  mediasdk_filter_blur_bg.glsl  mediasdk_filter_brannan.glsl  mediasdk_filter_calm.glsl  mediasdk_filter_contract.glsl  mediasdk_filter_cool.glsl  mediasdk_filter_cracked.glsl  mediasdk_filter_freud.glsl  mediasdk_filter_hefe.glsl  mediasdk_filter_hudson.glsl  mediasdk_filter_inkwell.glsl  mediasdk_filter_invert_color.glsl  mediasdk_filter_latte.glsl  mediasdk_filter_lolita.glsl  mediasdk_filter_lomo.glsl  mediasdk_filter_n1977.glsl  mediasdk_filter_nashville.glsl  mediasdk_filter_pink.glsl  mediasdk_filter_pixelize.glsl  mediasdk_filter_rise.glsl  mediasdk_filter_rococo.glsl  mediasdk_filter_romance.glsl  mediasdk_filter_rosy.glsl  mediasdk_filter_sketch.glsl  mediasdk_filter_sutro.glsl  (+99 more)
mediaSdk/src/main/res/values/: strings.xml
mediaSdk/src/main/res/values-zh-rCN/: strings.xml
mediaSdk/src/main/res/values-zh-rHK/: strings.xml
(+2650 files in other folders)
